<resources>
    <string name="app_name">TurisApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_sitios">Sitios</string>
    <string name="nav_hotel">Hoteles</string>
    <string name="nav_restaurante">Restaurantes</string>
    <string name="item_salir">Salir</string>
    <string name="nav_salir">Salir</string>
    <string name="tvDescription">Descripción</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvDescripcion">Descripcion</string>
    <string name="tvUbicacion">Ubicacion</string>
    <string name="worldskills">WorldSkills 2018</string>
    <string name="settingsInicio">Inicio</string>
    <string name="settingsSitios">Sitios</string>
    <string name="settingsHoteles">Hoteles</string>
    <string name="settingsRestaurantes">Restaurantes</string>
    <string name="settingsSalir">Salir</string>
    <string name="tvDescripcionApp">Con TurisApp podrar conocer los mejores lugares de Colombia</string>
</resources>
