<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_inicio"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_sitios"
            android:icon="@drawable/ic_sitios"
            android:title="@string/nav_sitios" />
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_hotel"
            android:title="@string/nav_hotel" />
        <item
            android:id="@+id/nav_restaurante"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_restaurante" />
    </group>

    <item android:title="@string/item_salir">
        <menu>
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_salir" />
        </menu>
    </item>

</menu>
