<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settingsInicio"
        android:orderInCategory="100"
        android:title="@string/settingsInicio"
        app:showAsAction="never" />
    <item
        android:id="@+id/settingsSitios"
        android:orderInCategory="100"
        android:title="@string/settingsSitios"
        app:showAsAction="never" />
    <item
        android:id="@+id/settingsHoteles"
        android:orderInCategory="100"
        android:title="@string/settingsHoteles"
        app:showAsAction="never" />
    <item
        android:id="@+id/settingsRestaurantes"
        android:orderInCategory="100"
        android:title="@string/settingsRestaurantes"
        app:showAsAction="never" />
    <item
        android:id="@+id/settingsSalir"
        android:orderInCategory="100"
        android:title="@string/settingsSalir"
        app:showAsAction="never" />
</menu>
